--- a/package.json
+++ b/package.json
@@ -1,14 +1,45 @@
 {
   "name": "ai-rate-limit",
   "version": "1.0.0",
-  "description": "Generate rate limiting configurations using AI",
+  "description": "AI-powered rate limiter setup - API throttling with GPT-optimized rules",
   "main": "dist/index.js",
-  "bin": { "ai-rate-limit": "dist/cli.js" },
-  "scripts": { "build": "tsc" },
-  "keywords": ["rate-limiting","security","ai","cli","api"],
+  "bin": {
+    "ai-rate-limit": "dist/cli.js"
+  },
+  "scripts": {
+    "build": "tsc"
+  },
+  "keywords": [
+    "ai",
+    "openai",
+    "gpt",
+    "rate-limiting",
+    "throttle",
+    "api",
+    "security",
+    "middleware",
+    "developer-tools",
+    "cli",
+    "automation",
+    "typescript",
+    "nodejs",
+    "express",
+    "backend"
+  ],
   "license": "MIT",
-  "dependencies": { "commander": "^12.1.0", "openai": "^4.73.0", "ora": "^5.4.1", "glob": "^10.3.0" },
-  "devDependencies": { "typescript": "^5.6.0", "@types/node": "^22.0.0" },
+  "dependencies": {
+    "commander": "^12.1.0",
+    "openai": "^4.73.0",
+    "ora": "^5.4.1",
+    "glob": "^10.3.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.0",
+    "@types/node": "^22.0.0"
+  },
   "author": "LXGIC Studios",
-  "repository": { "type": "git", "url": "https://github.com/LXGIC-Studios/ai-rate-limit" }
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LXGIC-Studios/ai-rate-limit"
+  }
 }
